name:                demoniclambda
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/demoniclambda#readme
license:             BSD3
license-file:        LICENSE
author:              Rao Zvorovski
maintainer:          rao.zvorovski@outlook.com
copyright:           2019 Rao Zvorovski
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable demoniclambda
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       parsec >= 3.1.13 && < 4,
                       containers >= 0.6 && < 1,
                       haskeline >= 0.7.5.0 && < 1,
		       llvm-hs-pure >= 7.0 && < 8,
		       llvm-hs >= 7.0 && < 8
  extensions:          OverloadedStrings, GeneralizedNewtypeDeriving
