name:                demoniclambda
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/demoniclambda#readme
license:             BSD3
license-file:        LICENSE
author:              Rao Zvorovski
maintainer:          rao.zvorovski@outlook.com
copyright:           2019 Rao Zvorovski
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable demoniclambda
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       CPS, AST, Codegen
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       parsec >= 3.1.13 && < 4,
                       containers >= 0.6 && < 1,
                       haskeline >= 0.7.5.0 && < 1,
                       llvm-hs-pure >= 8.0 && < 9,
                       llvm-hs >= 8.0 && < 9,
                       mtl >= 2.2.2 && < 3,
                       bytestring >= 0.10.8.2 && < 1,
                       text >= 1.2.3.1 && < 2,
                       pretty-simple >= 2.2 && < 3,
                       haskell-tree-sitter,
                       punycode >= 2.0 && < 3
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  extensions:          OverloadedStrings, GeneralizedNewtypeDeriving, RecursiveDo
  Include-dirs:        vendor/tree-sitter-demoniclambda/src
  c-sources:           vendor/tree-sitter-demoniclambda/src/parser.c
